add base .css stylesheet link and few meta tags

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:description" content="&mdash; I do not compete with others, the only competition that challenges me is myself. As a fighter, friend and an employee I am known as contemplative, tortured and driven.">
+    <meta property="og:title" content="Ryu Hoshi Résumé">
+    <meta property="og:locale" content="en_US">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://viss23.github.io/homepage/">
+    <link rel="stylesheet" href="./assets/css/base.css">
     <title>Résumé</title>
   </head>
   <body>
