--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <!-- Intro -->
+                    <h2>Résumé</h2>
+                        <p>― I do not compete with others, the only competition that challenges me is myself. As a fighter, friend and an employee I am known as contemplative, tortured and driven.</p> 
                   </div>
                 </div>
               </div>
@@ -40,7 +41,38 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <!-- Experience -->
+                <h3>Experiience</h3>
+                 <ul class="timeline">
+                  <li>
+                    <p>2018</p>
+                    <p>Amongst many fighters of the past was featured in the movie <a href="https://www.imdb.com/title/tt1677720/">"Ready Player One"</a>. Ryu ready always!</p>
+                  </li>
+                  <li>
+                    <p>2017</p>
+                    <p>United with unknown until then to me <a href="https://en.wikipedia.org/wiki/Power_Rangers">Power Rangers</a> to defeat resurrected M.Bison.Damn good fighters they are, even not knowing karate ways!</p>
+                  </li>
+                  <li>
+                    <p>2015</p>
+                    <p>In <a href="https://en.wikipedia.org/wiki/Street_Fighter_V">"Street Fighter V"</a> once and for all erased M.Bison from earth and tamed my inner Evil Ryu.
+                       Also spent some time on a side-project, mini-series <a href="https://en.wikipedia.org/wiki/Street_Fighter:_Resurrection">"Street Fighter: Resurrection"</a></p>
+                  </li>
+                  <li>
+                    <p>2014</p>
+                    <p>Filmed in a martial arts tutorial <a href="https://en.wikipedia.org/wiki/Street_Fighter:_Assassin%27s_Fist">"Street Fighter: Assassin's Fist"</a>, revealing to audience forgotten art of Ansatsuken.</p>
+                  </li>
+                  <li>
+                    <p>2012</p>
+                    <p>The gods of intenet concluded me in the animated movie <a href="https://en.wikipedia.org/wiki/Wreck-It_Ralph">"Wreck-It Ralph"</a> , but rewarded me with a good drink for it!</p>
+                  </li>
+                  <li>
+                    <p>2008</p>
+                    <p>My evil alter ego sneaked out of control and became a boss in <a href="https://en.wikipedia.org/wiki/Street_Fighter_IV">"Street Fighter IV"</a>.</p>
+                  </li>
+                  <li>
+                    <p>2006</p>
+                    <p>Borrowed my famous ripped gi to Soki in <a href="https://en.wikipedia.org/wiki/Onimusha:_Dawn_of_Dreams">"Onimusha: Dawn of Dreams"</a>, gods informed me he needed that for the battle.</p>
+                  </li>
+                 </ul>
               </div>
               <div class="six wide column">
                 <!-- Languages -->
