--- a/index.html
+++ b/index.html
@@ -73,6 +73,41 @@
                     <p>Borrowed my famous ripped gi to Soki in <a href="https://en.wikipedia.org/wiki/Onimusha:_Dawn_of_Dreams">"Onimusha: Dawn of Dreams"</a>, gods informed me he needed that for the battle.</p>
                   </li>
                  </ul>
+                 <h6>Sweet old days</h6>
+                 <ul class="timeline">
+                   <li>
+                     <p>1998</p>
+                     <p>Defeated M. Bison in <a href="https://en.wikipedia.org/wiki/Street_Fighter_Alpha_2">"Street Fighter Alpha 2"</a>, bastard wanted to use my heroic body for his evil intentions, but retreated with shame. Also this year I encountered Marvel 
+                       universe in <a href="https://en.wikipedia.org/wiki/Marvel_vs._Capcom:_Clash_of_Super_Heroes">"Marvel vs. Capcom: Clash of Super Heroes"</a> fighter,loyal to my employer, Capcom, of course.</p>
+                   </li>
+                   <li>
+                     <p>1997</p>
+                     <p>Reunited with Ken, my friend and opponent in <a href="https://en.wikipedia.org/wiki/Street_Fighter_III">"Street Fighter III"</a>. Men's friendship works mysteriously. 
+                       Also helped with Arika project <a href="https://en.wikipedia.org/wiki/Street_Fighter_EX">"Street Fighter EX"</a></p>
+                   </li>
+                   <li>
+                     <p>1996</p>
+                     <p>Took care of villainous Akuma in <a href="">"Street Fighter Alpha 2"</a>. As a freelance 
+                       on <a href="https://en.wikipedia.org/wiki/Super_Puzzle_Fighter_II_Turbo">"Super Puzzle Fighter II Turbo"</a> tried myself in a new genre, puzzle games. Let the wrath of seven heavens come upon these malicious enigmas, never again!</p>
+                   </li>
+                   <li>
+                     <p>1995</p>
+                     <p>Kept fighting in <a href="https://en.wikipedia.org/wiki/Street_Fighter_Alpha">"Street Fighter Alpha: Warriors' Dreams"</a>.</p>
+                   </li>
+                   <li>
+                     <p>1994</p>
+                     <p>Screened in a movie <a href="https://en.wikipedia.org/wiki/Street_Fighter_(1994_film)">"Street Fighter" </a>, so that the batllesof past would not be forgotten by millenial generation.
+                     </p>
+                   </li>
+                   <li>
+                     <p>1991</p>
+                     <p>Was promoted to <a href="https://en.wikipedia.org/wiki/Street_Fighter_II:_The_World_Warrior">"Street Fighter II"</a>. Didn't stay there for long, celebrations and office dwelling is not for me!</p>
+                   </li>
+                   <li>
+                     <p>1987</p>
+                     <p>Started working for Capcom project <a href="https://en.wikipedia.org/wiki/Street_Fighter_(video_game)">"Street Fighter"</a>. My partner was Ken Masters, the boss'name was Sagat.</p>
+                   </li>
+                </ul>
               </div>
               <div class="six wide column">
                 <!-- Languages -->
