--- a/index.html
+++ b/index.html
@@ -110,7 +110,10 @@
                 </ul>
               </div>
               <div class="six wide column">
-                <!-- Languages -->
+                <section>
+                  <h3>Languages</h3>
+                  <p class="tags small"> <b>&#127482;&#127480;</b> ENGLISH <b>&#127464;&#127475;</b> MANDARIN <b>&#127471;&#127477;</b> JAPANESE</p>
+                </section>
                 <!-- Skills -->
                 <!-- Character -->
                 <!-- Likes -->
