--- a/index.html
+++ b/index.html
@@ -114,7 +114,10 @@
                   <h3>Languages</h3>
                   <p class="tags small"> <b>&#127482;&#127480;</b> ENGLISH <b>&#127464;&#127475;</b> MANDARIN <b>&#127471;&#127477;</b> JAPANESE</p>
                 </section>
-                <!-- Skills -->
+                <section>
+                  <h3>Skills</h3>
+                  <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS MASHING POTATOES COPYWRITING ACTING VOICEOVERS </p> 
+                </section>
                 <!-- Character -->
                 <!-- Likes -->
                 <!-- Dislikes -->
