Life lesson section
Also added new .css file and few images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://viss23.github.io/homepage/">
     <link rel="stylesheet" href="./assets/css/base.css">
+    <link rel="stylesheet" href="./assets/css/my.css">
     <script src="./assets/js/myscript.js"></script>
     <title>Résumé</title>
   </head>
@@ -130,7 +131,21 @@
                       </button>
                   DARING SCHIZOPHRENIC DRAMATIC PERSUASIVE IMMEDIATE WISE</p>
                 </section>
-                <!-- Likes -->
+                <section>
+                  <h3>Life Lesson</h3>
+                    <li class="details">
+                      <input type="checkbox" id="you-must">
+                      <label for="you-must" class="summary"><p>You must defeat Sheng Long to <b>stand a chance</b>.</p></label>
+                      <div class="labels">
+                        <div class="card">
+                          <div class="card_part card_part-one"></div>
+                          <div class="card_part card_part-two"></div>
+                          <div class="card_part card_part-three"></div>
+                          <div class="card_part card_part-four"></div>
+                        </div>
+                      </div>
+                  </li>
+                </section>
                 <!-- Dislikes -->
                 <!-- Wants -->
                 <!-- Education -->
