--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
                       </div>
                   </li>
                 </section>
+                <section>
+                  <h3>Likes&#x1f603;</h3>
+                  <p class="tags small">GI VEGETABLES <button id="blood" class="color blood">BLOOD</button>  SMALL MARSHMELLOWS <button id="red" class="color red">RED COLOR</button> KILLED ENEMY</p>
+                </section>
+                <section>
+                  <h3>Dislikes&#x1f61e;</h3>
+                  <p class="tags small">BISONS <span id="ghost">GHOSTS I HATE THEM!!!</span> SMARTPHONES SMELL OF SEAFOOD BARBER SHOPS SLEEVES</p>
+                  <div id="ghost-animation">
+                    <div class="hadouken">
+                      <img src="/assets/gifs/hadouken.gif" alt="hadouken"  width=150 class="hadouken-ryu" />
+                      <img src="/assets/gifs/ghost.gif" alt="ghost"  width=150 class="hadouken-ghost"/>
+                    </div>
+                  </div>
+                </section>
                 <!-- Dislikes -->
                 <!-- Wants -->
                 <!-- Education -->
