Wants and achivements

--- a/index.html
+++ b/index.html
@@ -160,10 +160,20 @@
                     </div>
                   </div>
                 </section>
-                <!-- Dislikes -->
-                <!-- Wants -->
-                <!-- Education -->
-                <!-- Articles -->
+                <section>
+                  <h3>Wants&#x1f97a;</h3>
+                  <p class="tags small bulleted"><span class="tag">BE FIT</span><span class="tag">WRITE MORE BOOKS</span><span class="tag">FIND A GIRLFRIEND </span><span class="tag">GO TO CINEMA  </span><span class="tag">KILL ALL OF AKUMA FAMILY</span></p>
+                </section>
+                  <section>
+                    <h3>Achievements 🏆 </h3>
+                    <ul class="timeline">
+                      <li>● 🥇#1 in "Top 25 Street Fighter Characters" by IGN, who also called me "fancy", "icon" and "a testament to the virtue of simplicity" ❤️</li>
+                      <li>● 🥈#2 in "Top 20 Street Fighter Characters of All Time" by GameDaily, same council found me worth of #6 place in "Top 25 Capcom Characters of All Time", which I proudly share with my partner Ken</li>
+                      <li>● I was named 💪"5th Most Powerful Street Fighter Character" by Screen Rant-san</li>
+                      <li>● #71 in "Top 100 Heroes of All Time" by UGO Networks, also recognized 😎#2 in their list of "Top 50 Street Fighter Characters"</li>
+                      <li>● In a survey of 4000 online matches for Super Street Fighter IV, I got to be the most popular character, with 16.6% of players choosing my side❤️</li>
+                    </ul>
+                  </section>
               </div>
             </div>
           </div>
