--- a/index.html
+++ b/index.html
@@ -186,8 +186,8 @@
                   <p class="tags small">BISONS <span id="ghost">GHOSTS I HATE THEM!!!</span> SMARTPHONES SMELL OF SEAFOOD BARBER SHOPS SLEEVES</p>
                   <div id="ghost-animation">
                     <div class="hadouken">
-                      <img src="/assets/gifs/hadouken.gif" alt="hadouken"  width=150 class="hadouken-ryu" />
-                      <img src="/assets/gifs/ghost.gif" alt="ghost"  width=150 class="hadouken-ghost"/>
+                      <img src="./assets/gifs/hadouken.gif" alt="hadouken"  width=150 class="hadouken-ryu" />
+                      <img src="./assets/gifs/ghost.gif" alt="ghost"  width=150 class="hadouken-ghost"/>
                     </div>
                   </div>
                 </section>
