Add viewport and desciption Closes #17

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Ryu website">
     <meta property="og:description" content="&mdash; I do not compete with others, the only competition that challenges me is myself. As a fighter, friend and an employee I am known as contemplative, tortured and driven.">
     <meta property="og:title" content="Ryu Hoshi Résumé">
     <meta property="og:locale" content="en_US">
@@ -186,8 +188,8 @@
                   <p class="tags small">BISONS <span id="ghost">GHOSTS I HATE THEM!!!</span> SMARTPHONES SMELL OF SEAFOOD BARBER SHOPS SLEEVES</p>
                   <div id="ghost-animation">
                     <div class="hadouken">
-                      <img src="/assets/gifs/hadouken.gif" alt="hadouken"  width=150 class="hadouken-ryu" />
-                      <img src="/assets/gifs/ghost.gif" alt="ghost"  width=150 class="hadouken-ghost"/>
+                      <img src="./assets/gifs/hadouken.gif" alt="hadouken"  width=150 class="hadouken-ryu" />
+                      <img src="./assets/gifs/ghost.gif" alt="ghost"  width=150 class="hadouken-ghost"/>
                     </div>
                   </div>
                 </section>
