Add hadouken Closes #23

--- a/index.html
+++ b/index.html
@@ -79,7 +79,9 @@
             <div class="row">
               <div class="ten wide column">
                 <h3>Experiience</h3>
-                 <ul class="timeline">
+                <img src="./assets/gifs/powerful-hadouken.gif" alt="hadouken"   id="powerful-hadouken" />
+                <img src="./assets/gifs/ray.gif" alt="hadouken-ray"  id="ray" />
+                 <ul class="timeline" id="hadouken-animation1">
                   <li>
                     <p>2018</p>
                     <p>Amongst many fighters of the past was featured in the movie <a href="https://www.imdb.com/title/tt1677720/">"Ready Player One"</a>. Ryu ready always!</p>
@@ -111,7 +113,7 @@
                   </li>
                  </ul>
                  <h6>Sweet old days</h6>
-                 <ul class="timeline">
+                 <ul class="timeline" id="hadouken-animation2">
                    <li>
                      <p>1998</p>
                      <p>Defeated M. Bison in <a href="https://en.wikipedia.org/wiki/Street_Fighter_Alpha_2">"Street Fighter Alpha 2"</a>, bastard wanted to use my heroic body for his evil intentions, but retreated with shame. Also this year I encountered Marvel 
@@ -153,7 +155,9 @@
                 </section>
                 <section>
                   <h3>Skills</h3>
-                  <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS MASHING POTATOES COPYWRITING ACTING VOICEOVERS </p> 
+                  <p class="tags small">KARATE ENERGY ATTACK SHORYUKEN WALKING BAREFOOT PLAYING VIDEOGAMES DOING BURGERS 
+                    MASHING POTATOES COPYWRITING ACTING VOICEOVERS <strong id="hadouken">HADOUUUUUUUUUUUUUUUUUKEN</strong></p> 
+                    <audio id="hadouken-audio" src="./assets/sounds/HADOUKEN.mp3"></audio>
                 </section>
                 <section>
                   <h3>Character</h3>
