Undo hadouken closes #27

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     <p>Borrowed my famous ripped gi to Soki in <a href="https://en.wikipedia.org/wiki/Onimusha:_Dawn_of_Dreams">"Onimusha: Dawn of Dreams"</a>, gods informed me he needed that for the battle.</p>
                   </li>
                  </ul>
-                 <h6>Sweet old days</h6>
+                 <h6><span id="hadouken-cancel-text">Sweet old days</span> <span id="hadouken-undo">-Yeeeah...</span></h6>
                  <ul class="timeline" id="hadouken-animation2">
                    <li>
                      <p>1998</p>
