left part improvement

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
     <link rel="ryu" href="https://twitter.com/denjinryu">
     <link rel="ryu" href="https://www.instagram.com/sworn_ryu/">
     <script src="./assets/js/myscript.js"></script>
-    <title>Résumé</title>
+    <title>Ryu portfolio</title>
   </head>
   <body>
     <main>
       <article>
-        <div class="page" style="border-color: midnightblue;">
+        <div class="page" style="border-color: #0057BB;">
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
@@ -83,69 +83,80 @@
                 <img src="./assets/gifs/ray.gif" alt="hadouken-ray"  id="ray" />
                  <ul class="timeline" id="hadouken-animation1">
                   <li>
-                    <p>2018</p>
-                    <p>Amongst many fighters of the past was featured in the movie <a href="https://www.imdb.com/title/tt1677720/">"Ready Player One"</a>. Ryu ready always!</p>
+                    <p class="timeline-date">—2018</p>
+                    <p class="timeline-text">Amongst many fighters of the past was featured in the movie <a href="https://www.imdb.com/title/tt1677720/">"Ready Player One"</a>. Ryu ready always!</p>
                   </li>
                   <li>
-                    <p>2017</p>
-                    <p>United with unknown until then to me <a href="https://en.wikipedia.org/wiki/Power_Rangers">Power Rangers</a> to defeat resurrected M.Bison.Damn good fighters they are, even not knowing karate ways!</p>
+                    <p class="timeline-date">—2017</p>
+                    <p class="timeline-text">United with unknown until then to me <a href="https://en.wikipedia.org/wiki/Power_Rangers">Power Rangers</a> to defeat resurrected M.Bison.Damn good fighters they are, even not knowing karate ways!</p>
                   </li>
                   <li>
-                    <p>2015</p>
-                    <p>In <a href="https://en.wikipedia.org/wiki/Street_Fighter_V">"Street Fighter V"</a> once and for all erased M.Bison from earth and tamed my inner Evil Ryu.
+                    <p class="timeline-date">—2015</p>
+                    <p class="timeline-text">In <a href="https://en.wikipedia.org/wiki/Street_Fighter_V">"Street Fighter V"</a> once and for all erased M.Bison from earth and tamed my inner Evil Ryu.
                        Also spent some time on a side-project, mini-series <a href="https://en.wikipedia.org/wiki/Street_Fighter:_Resurrection">"Street Fighter: Resurrection"</a></p>
                   </li>
                   <li>
-                    <p>2014</p>
-                    <p>Filmed in a martial arts tutorial <a href="https://en.wikipedia.org/wiki/Street_Fighter:_Assassin%27s_Fist">"Street Fighter: Assassin's Fist"</a>, revealing to audience forgotten art of Ansatsuken.</p>
+                    <p class="timeline-date">—2014</p>
+                    <p class="timeline-text">Filmed in a martial arts tutorial <a href="https://en.wikipedia.org/wiki/Street_Fighter:_Assassin%27s_Fist">"Street Fighter: Assassin's Fist"</a>, revealing to audience forgotten art of Ansatsuken.</p>
                   </li>
                   <li>
-                    <p>2012</p>
-                    <p>The gods of intenet concluded me in the animated movie <a href="https://en.wikipedia.org/wiki/Wreck-It_Ralph">"Wreck-It Ralph"</a> , but rewarded me with a good drink for it!</p>
+                    <p class="timeline-date">—2012</p>
+                    <p class="timeline-text">The gods of intenet concluded me in the animated movie <a href="https://en.wikipedia.org/wiki/Wreck-It_Ralph">"Wreck-It Ralph"</a> , but rewarded me with a good drink for it!</p>
                   </li>
                   <li>
-                    <p>2008</p>
-                    <p>My evil alter ego sneaked out of control and became a boss in <a href="https://en.wikipedia.org/wiki/Street_Fighter_IV">"Street Fighter IV"</a>.</p>
+                    <p class="timeline-date">—2008</p>
+                    <p class="timeline-text">My evil alter ego sneaked out of control and became a boss in <a href="https://en.wikipedia.org/wiki/Street_Fighter_IV">"Street Fighter IV"</a>.</p>
                   </li>
                   <li>
-                    <p>2006</p>
-                    <p>Borrowed my famous ripped gi to Soki in <a href="https://en.wikipedia.org/wiki/Onimusha:_Dawn_of_Dreams">"Onimusha: Dawn of Dreams"</a>, gods informed me he needed that for the battle.</p>
+                    <p class="timeline-date">—2006</p>
+                    <p class="timeline-text">Borrowed my famous ripped gi to Soki in <a href="https://en.wikipedia.org/wiki/Onimusha:_Dawn_of_Dreams">"Onimusha: Dawn of Dreams"</a>, gods informed me he needed that for the battle.</p>
                   </li>
                  </ul>
                  <h6><span id="hadouken-cancel-text">Sweet old days</span> <span id="hadouken-undo">-Yeeeah...</span></h6>
                  <ul class="timeline" id="hadouken-animation2">
                    <li>
-                     <p>1998</p>
-                     <p>Defeated M. Bison in <a href="https://en.wikipedia.org/wiki/Street_Fighter_Alpha_2">"Street Fighter Alpha 2"</a>, bastard wanted to use my heroic body for his evil intentions, but retreated with shame. Also this year I encountered Marvel 
+                     <p class="timeline-date">—1998</p>
+                     <p class="timeline-text">Defeated M. Bison in <a href="https://en.wikipedia.org/wiki/Street_Fighter_Alpha_2">"Street Fighter Alpha 2"</a>, bastard wanted to use my heroic body for his evil intentions, but retreated with shame. Also this year I encountered Marvel 
                        universe in <a href="https://en.wikipedia.org/wiki/Marvel_vs._Capcom:_Clash_of_Super_Heroes">"Marvel vs. Capcom: Clash of Super Heroes"</a> fighter,loyal to my employer, Capcom, of course.</p>
                    </li>
                    <li>
-                     <p>1997</p>
-                     <p>Reunited with Ken, my friend and opponent in <a href="https://en.wikipedia.org/wiki/Street_Fighter_III">"Street Fighter III"</a>. Men's friendship works mysteriously. 
+                     <p class="timeline-date">—1997</p>
+                     <p class="timeline-text">Reunited with Ken, my friend and opponent in <a href="https://en.wikipedia.org/wiki/Street_Fighter_III">"Street Fighter III"</a>. Men's friendship works mysteriously. 
                        Also helped with Arika project <a href="https://en.wikipedia.org/wiki/Street_Fighter_EX">"Street Fighter EX"</a></p>
                    </li>
-                   <li>
-                     <p>1996</p>
-                     <p>Took care of villainous Akuma in <a href="">"Street Fighter Alpha 2"</a>. As a freelance 
+                   <li >
+                     <p class="timeline-date">—1996</p>
+                     <p class="timeline-text">Took care of villainous Akuma in <a href="">"Street Fighter Alpha 2"</a>. As a freelance 
                        on <a href="https://en.wikipedia.org/wiki/Super_Puzzle_Fighter_II_Turbo">"Super Puzzle Fighter II Turbo"</a> tried myself in a new genre, puzzle games. Let the wrath of seven heavens come upon these malicious enigmas, never again!</p>
                    </li>
                    <li>
-                     <p>1995</p>
-                     <p>Kept fighting in <a href="https://en.wikipedia.org/wiki/Street_Fighter_Alpha">"Street Fighter Alpha: Warriors' Dreams"</a>.</p>
+                     <p class="timeline-date">—1995</p>
+                     <p class="timeline-text">Kept fighting in <a href="https://en.wikipedia.org/wiki/Street_Fighter_Alpha">"Street Fighter Alpha: Warriors' Dreams"</a>.</p>
                    </li>
                    <li>
-                     <p>1994</p>
-                     <p>Screened in a movie <a href="https://en.wikipedia.org/wiki/Street_Fighter_(1994_film)">"Street Fighter" </a>, so that the batllesof past would not be forgotten by millenial generation.
+                     <p class="timeline-date">—1994</p>
+                     <p class="timeline-text">Screened in a movie <a href="https://en.wikipedia.org/wiki/Street_Fighter_(1994_film)">"Street Fighter" </a>, so that the batllesof past would not be forgotten by millenial generation.
                      </p>
                    </li>
                    <li>
-                     <p>1991</p>
-                     <p>Was promoted to <a href="https://en.wikipedia.org/wiki/Street_Fighter_II:_The_World_Warrior">"Street Fighter II"</a>. Didn't stay there for long, celebrations and office dwelling is not for me!</p>
+                     <p class="timeline-date">—1991</p>
+                     <p class="timeline-text">Was promoted to <a href="https://en.wikipedia.org/wiki/Street_Fighter_II:_The_World_Warrior">"Street Fighter II"</a>. Didn't stay there for long, celebrations and office dwelling is not for me!</p>
                    </li>
                    <li>
-                     <p>1987</p>
-                     <p>Started working for Capcom project <a href="https://en.wikipedia.org/wiki/Street_Fighter_(video_game)">"Street Fighter"</a>. My partner was Ken Masters, the boss'name was Sagat.</p>
+                     <p class="timeline-date">—1987</p>
+                     <p class="timeline-text">Started working for Capcom project <a href="https://en.wikipedia.org/wiki/Street_Fighter_(video_game)">"Street Fighter"</a>. My partner was Ken Masters, the boss'name was Sagat.</p>
                    </li>
+                </ul>
+                <ul class="timeline" id="hadouken-animation3">
+                  <li>
+                    <h3>Publications</h3>
+                    <p class="timeline-date">—2011</p>
+                    <p class="timeline-text">The true and humble story of me under pseudonim Tyler Wilde in an article "The evolution of Ken and Ryu"</p>
+                  </li>
+                  <li>
+                    <p class="timeline-date">—2003-2018</p>
+                    <p class="timeline-text">For 15 years I have published comic books with Udon Entertainment depicting my adventures, bitter lessons and great victories.</p>
+                  </li>
                 </ul>
               </div>
               <div class="six wide column">
